# eodaego-AI

./: .dockerignore  .env.example  .gitignore  CLAUDE.md  Dockerfile  NPM Publish Workflow Setup.md  openapi.json  pyproject.toml
.claude/rules/: 00-project-overview.md  10-architecture-and-boundaries.md  20-team-conventions.md  30-testing-and-verification.md  40-delivery-and-review.md
.github/workflows/: android-twa-build.yml  capacitor-app-build.yml  capacitor-app-upload.yml  npm-publish.yml  python-server-cicd.yml
alembic/: env.py
alembic/versions/: 0001_create_initial_tables.py  0002_redesign_congestion_snapshot.py  0003_create_catalog_tables.py  0004_create_facility_tables.py  0005_seed_schedule_config.py  0006_create_weather_snapshot_table.py  0007_seed_weather_schedule_config.py  0008_add_model_to_prompt_template.py  0009_add_purpose_to_prompt_template.py  0010_make_facility_external_id_nullable.py  0011_create_preference_category_mapping.py  0012_seed_preference_category_mapping.py  0013_add_code_to_facility.py  0014_seed_facility_gates.py  0015_create_cultural_event_table.py  0016_seed_event_schedule_config.py  0017_seed_learning_preference_mapping.py  0018_create_recommendation_history_table.py
app/: main.py
app/core/: config.py  errors.py  job_lock.py  kst.py  logging.py  openapi.py  schema.py  security.py
app/db/: session.py
app/domains/ai/: router.py  schema.py  service.py  suh_aider_client.py
app/domains/catalog/: model.py  router.py  schema.py  service.py
app/domains/crawling/: model.py  router.py  schema.py  service.py
app/domains/event/: model.py  router.py  schema.py  service.py
app/domains/facility/: model.py  router.py  schema.py  service.py
app/domains/prompt/: model.py  router.py  schema.py  service.py
app/domains/recommendation/: model.py  route_optimizer.py  router.py  schema.py  service.py
app/domains/weather/: model.py  router.py  schema.py  service.py
app/scheduler/: registry.py
data/: seoul_childrens_grand_park_facility_locations.xlsx
scripts/: import_facility_locations.py
tests/: conftest.py  test_alembic_migrations.py  test_health.py
tests/core/: test_config.py  test_errors.py  test_logging.py  test_security.py
tests/db/: test_session.py
tests/domains/crawling/: test_router.py
tests/domains/prompt/: test_router.py
tests/scheduler/: test_registry.py
