[project]
name = "eodaego-ai"
version = "0.1.0"
description = "eodaego AI 서버 (FastAPI)"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.32",
    "pydantic-settings>=2.6",
    "sqlalchemy>=2.0",
    "psycopg[binary]>=3.2",
    "alembic>=1.13",
    "apscheduler>=3.10",
    "requests>=2.34.2",
    "beautifulsoup4>=4.15.0",
    "lxml>=6.1.1",
    "openpyxl>=3.1.5",
]

[dependency-groups]
dev = [
    "ruff>=0.7",
    "mypy>=1.13",
]

[tool.uv]
default-groups = ["dev"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[tool.ruff.lint.flake8-bugbear]
extend-immutable-calls = ["fastapi.Depends"]

# alembic/ 디렉터리(마이그레이션 스크립트 위치)가 프로젝트 루트에 있어 isort가
# alembic 패키지를 first-party로 오인하는 것을 방지
[tool.ruff.lint.isort]
known-third-party = ["alembic"]

[tool.mypy]
python_version = "3.12"
strict = true

[[tool.mypy.overrides]]
module = ["apscheduler.*", "requests.*", "bs4.*", "openpyxl.*"]
ignore_missing_imports = true
